Fixed "mission" and "start cooking" overlap

--- a/static/style.css
+++ b/static/style.css
@@ -230,11 +230,11 @@ form .input {
 
 }
 
-/*.homeTitles {
-    height: 100vh;
+.homeTitles {
+    height: 20vh;
     width: 100%;
     background-position: center;
-}*/
+}
 
 .mission{
     margin-top: 100px;
